styles/default.less
// out: default.css, sourcemap: false, compress: true

@import url('base.less');

////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////

html {
  overflow-x: hidden;

  &[lang="ca"] body > [data-lesson] {

    &:before {
      content: "Lliçó " attr(data-lesson);
    }
  }

  &[lang="en"] body > [data-lesson] {

    &:before {
      content: "Lesson " attr(data-lesson);
    }
  }

  &[lang="es"] body > [data-lesson] {

    &:before {
      content: "Lección " attr(data-lesson);
    }
  }

  body {
    .western-sans;
    position: relative;
  	-moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
  	         font-smoothing: antialiased;

    > .navbar {
      background-color: Magenta !important;
      padding: 16px / 2 16px / 4;

      > a.navbar-brand {
        .notosansjapanese; .regular;
        color: fadeout(@white, 10%);
        font-size: 16px;
        line-height: 16px * 2;
        margin: 0 16px / 2;
        padding-top: 0; padding-bottom: 0;
        text-transform: uppercase;

        &:focus,
        &:hover {
          color: fadeout(@white, 10%);
        }

        > b {
          .semi_bold;
        }

        > i {
          .notosans; .medium; .normal;
        }
      }

      > button.navbar-toggler {
        border: none;
        border-radius: 0;
        cursor: pointer;
        margin: 0 16px / 2;
        padding: 0 16px / 2;

        &[aria-expanded="false"] {

          > span {
            color: fadeout(@white, 50%);
          }
        }

        &[aria-expanded="true"] {

          > span {
            color: fadeout(@white, 10%);
          }
        }

        &:focus,
        &:hover {

          > span {
            color: fadeout(@white, 10%);
          }
        }

        > span {
          color: fadeout(@white, 50%);
        }
      }

      > div.navbar-collapse {
        margin: 0 16px / 2;

        > span.navbar-text {
          .western-sans; .regular;
          font-size: 16px / 1.1;
          line-height: 16px / 1.1;
          padding: 16px / 2 0 16px / 2.5 0;
        }

        > div.navbar-nav {
          .clearfix;
          .show;
          margin-left: 16px / 8;
          max-width: 256px; // 8 Lessons per row; then line-break

          a.nav-item {

            &.nav-link {
              background-color: fadeout(@white, 90%);
              display: block;
              float: left;
              font-size: 16px / 1.1;
              line-height: (16px / 1.1) * 1.25;
              margin: 16px / 8;
              max-height: 28px; min-height: 28px;
              max-width: 28px; min-width: 28px;
              padding: 16px / 4;
              text-align: center;
            }

            &.disabled {
              cursor: default;
            }
          }
        }
      }
    }

    > [data-lesson] {
      .clearfix;
      margin-bottom: 16px;
      padding-left: 16px / 4; padding-right: 16px / 4;
      max-width: 16px * 63.5;

      &:before {
        .show;
        .western-sans; .semi_bold;
        color: @black;
        font-size: 16px * 1.5;
        line-height: (16px * 2) * 1.5;
        margin-left: 16px / 2;
      }

      > .row {
        .clearfix;
        border: 1px solid @black;
        float: left;
        margin: 16px / 2 16px / 2;
        min-width: (16px * 18) - 16;
        height: auto; width: calc(~'100% - (16px)');

        > div {
          border-bottom: 1px solid @black;
          padding-left: 0; padding-right: 0;

          &:nth-last-child(1) {
            border-bottom: none;
          }

          &:nth-child(1) {
            .eastern-sans; .extra_light;
            .vertical-align-flexbox;
            font-size: 16px * 2.2;
            height: 16px * 5; width: 100%;
            line-height: (16px * 2) * 2.2;
            position: relative;
            text-align: center;

            &:after {
              .show;
              .western-sans; .regular;
              background-color: transparent;
              color: @black;
              content: "(" attr(data-strokes) ")";
              font-size: 16px / 1.5;
              height: 16px * 1.5; width: 16px * 1.5;
              line-height: (16px * 2) / 1.5;
              position: absolute;
              bottom: 0; right: 0;
              vertical-align: middle;
            }

            &:before {
              .show;
              .western-sans; .semi_bold;
              background-color: @black;
              color: @white;
              content: attr(data-number);
              font-size: 16px / 1.5;
              height: 16px * 1.5; width: 16px * 1.5;
              line-height: (16px * 2) / 1.5;
              position: absolute;
                top: -1px; left: -1px;
              vertical-align: middle;
            }

            &:focus,
            &:hover {
              // .eastern-serif;
            }

            > a {
              color: @black;

              &:focus,
              &:hover {
                color: inherit;
                text-decoration: none;
              }
            }
          }

          &:nth-child(2) {
            .eastern-sans; .regular;
            .vertical-align-flexbox;
            font-size: 16px;
            line-height: 16px * 1.5;
            height: 16px * 5; width: 100%;
            padding: 0 16px / 2;
            white-space: normal;
            word-break: normal;
            word-wrap: normal;

            > div {
              height: auto; width: 50%;
              text-align: center;
            }
          }

          &:nth-child(3) {
            height: 16px * 8; width: 100%;

            > ul {
              .vertical-align;
              list-style-type: none;
              list-style-position: inside;
              margin-bottom: 0;
              padding: 0 16px / 2;

              > li {
                .clearfix;
                height: 32px; width: 100%;

                > ruby {
                  .clearfix;
                  .eastern-sans;
                  float: left;

                  > rb {
                    .regular;
                    display: inline-block;
                    float: left;
                    font-size: 16px / 1.2;
                    line-height: 16px * 2;

                    > a {
                      color: inherit;

                      &:focus,
                      &:hover {
                        color: inherit;
                        text-decoration: none;
                      }
                    }
                  }

                  > rt {
                    .extra_light;
                    display: inline-block;
                    float: left;
                    font-size: 16px / 1.2;
                    line-height: 16px * 2;
                  }
                }

                > span {
                  .truncate;
                  .western-sans; .light;
                  font-size: 16px / 1.2;
                  line-height: 16px * 2;

                  &:focus,
                  &:hover {
                    overflow: visible;
                    text-overflow: inherit;
                    white-space: nowrap;
                  }
                }
              }
            }
          }
        }
      }
    }
  }
}

////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////

@import url('xs.less');
@import url('sm.less');
@import url('md.less');
@import url('lg.less');

////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////
//////////////////////////////////////////////// THIS IS THE END

